demo-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: demo-pod
  labels:
    purpose: test-chuck-containers
spec:
  containers:
  - name: base
    image: us.gcr.io/sandbox-199519/tsugi_base:latest
