dev-deploy.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: dev
  labels:
    app: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dev
  # https://tachingchen.com/blog/kubernetes-rolling-update-with-deployment/
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: dev
    spec:
      containers:
      - name: dev
        image: us.gcr.io/sandbox-199519/tsugi_dev:latest
        ports:
        - containerPort: 80
