tsugi-deploy.yml
apiVersion: extensions/v1beta1
# kubectl create secret generic tsugi-db-credentials --from-literal=username=ltiuser --from-literal=password=ltipassword
kind: Deployment
metadata:
  name: tsugi
  labels:
    app: tsugi
spec:
  template:
    metadata:
      labels:
        app: tsugi
    spec:
      containers:
        - name: web
          image: us.gcr.io/sandbox-199519/tsugi_kube:latest
          ports:
            - containerPort: 80
        - name: cloudsql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.11
          command: ["/cloud_sql_proxy",
                    "-instances=sandbox-199519:us-central1:sandbox-db-01=tcp:3306",
                    "-credential_file=/secrets/cloudsql/credentials.json"]
          volumeMounts:
            - name: cloudsql-instance-credentials
              mountPath: /secrets/cloudsql
              readOnly: true
        # [END proxy_container]
      # [START volumes]
      volumes:
        - name: cloudsql-instance-credentials
          secret:
            secretName: cloudsql-instance-credentials
      # [END volumes]
