dev-service-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: dev
  labels:
    run: dev
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 30036
    protocol: TCP
  type: NodePort
  selector:
    run: dev
