nfs-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nfs-server
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
  labels:
    app: nfs-server
spec:
  type: LoadBalancer
  ports:
    - name: nfs
      port: 2049
    - name: mountd
      port: 20048
    - name: rpcbind
      port: 111
  selector:
    role: nfs-server
    app: nfs-server

# https://github.com/mappedinn/kubernetes-nfs-volume-on-gke/blob/master/config-yml-files/02-srv-nfs.yml
