dev-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test
spec:
  rules:
  - host: dev.lrnxp.net
    http:
      paths:
      - backend:
          serviceName: dev
          servicePort: 80
